Clean up and slight update

--- a/index.html
+++ b/index.html
@@ -14,30 +14,6 @@
     <link rel="shortcut icon" href="img/favicon.ico">
   </head>
 <body>
-    <!-- TODO Pages
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-      	<div class="navbar-header">
-        	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            	<span class="sr-only">Toggle navigation</span>
-            	<span class="icon-bar"></span>
-            	<span class="icon-bar"></span>
-            	<span class="icon-bar"></span>
-          	</button>
-          	<span id="name" class="navbar-brand">
-        		<img src="img/logo.png" width="60"/>
-        	</span>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse pull-right">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    -->
     <div class="container" style="margin-top: 80px;">
       <div class="row">
         <div class="content-container col-md-8 col-md-offset-2">
@@ -45,13 +21,14 @@
                 <div class="col-sm-12">
                     <div class="intro">
                         <h3 class="first">Hello, I'm Annie.</h3>
-                        <p>UI Software Engineer & Aspiring Foodtographer</p>
+                        <p>UI Software Engineer</p>
                     </div>
                 </div>
                 <div class="col-md-12">
                     <div class="cube-link">
                         <img src="img/me.jpg" class="img-frame profile-pic" width="100"/>
                         <a href="http://www.linkedin.com/in/annieweng" class="link" title="LinkedIn" target="_blank"><span class="fa fa-linkedin fa-2x"></span></a>
+                        <a href="https://github.com/aniwng" class="link" title="GitHub" target="_blank"><span class="fa fa-github fa-2x"></span></a>
                         <a href="http://www.flickr.com/photos/aniwng" class="link" title="Flickr" target="_blank"><span class="fa fa-flickr fa-2x"></span></a>
                         <a href="mailto:hello@annieweng.com" class="link" title="Email"><span class="fa fa-envelope fa-2x"></span></a>
                     </div>
@@ -59,7 +36,6 @@
             </div>
         </div>
       </div>
-    </div> <!-- /container -->
-
+    </div>
 </body>
 </html>
