--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="intro">
-                        <h3 class="first">Hello, I'm Annie.</h3>
-                        <p>UI Software Engineer</p>
+                        <h1 class="header">Hello, I'm Annie.</h3>
+                        <h2 class="subheader">UI Software Engineer</p>
                     </div>
                 </div>
                 <div class="col-md-12">
