--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="col-md-12">
                     <div class="cube-link">
-                        <img src="img/me.jpg" class="img-frame profile-pic" width="100"/>
+                        <img src="img/ME.JPG" class="img-frame profile-pic" width="100"/>
                         <a href="http://www.linkedin.com/in/annieweng" class="link" title="LinkedIn" target="_blank"><span class="fa fa-linkedin fa-2x"></span></a>
                         <a href="https://github.com/aniwng" class="link" title="GitHub" target="_blank"><span class="fa fa-github fa-2x"></span></a>
                         <a href="http://www.flickr.com/photos/aniwng" class="link" title="Flickr" target="_blank"><span class="fa fa-flickr fa-2x"></span></a>
